﻿Subtitle Edit Changelog

3.5.17 (xth September 2020) BETA
* NEW:
   * Add new subtitle format - thx Holmgeir
   * Add shortcuts for Tools menu items Split/Append/Join - thx z3us
* IMPROVED:
   * Update Bulgarian translation - thx KalinM
   * Update Hungarian translation - thx Zityi
   * Update Finnish translation - thx Teijo S
   * Improve support for transport stream in "cmd line convert"
   * Improve support for transport stream in "Batch convert"
   * Cmd line convert use header from EBU STL file - thx malashin
   * Add "ocrengine" parameter to cmd line convert
   * Improve reading of badly formatted srt files - thx Gordon
   * Add "Export to FCP+image" in OCR window - thx Marko
* FIXED:
   * Fix for overlap in "Tools -> Adjust durations" - thx Christian
   * Fix some shortcuts being written to text box - thx rebawest
   * Fix casing in OCR for italian letter "Ú"
   * Fix "Import plain text" for small resolutions - thx doquan0
   * Fix syntax coloring after replace - thx OmrSi
   * Fix minor label issue at startup - thx Bill
   * Keep bookmarks after edit in source view - thx Ingo
   * Fix crash on very very long text lines
   * Fix bug with multi-line-bold in export/box-for-each-line - thx thehulk
   * Fix a few shortcuts for menu items - thx LiMa79#4271


3.5.16 (16th June 2020)
* NEW:
   * OCR method "nOCR" (vector based with auto training) - thx Janusz
   * Enable custom color for waveform cursor
   * New shortcuts to move start/end one frame
   * New shortcuts to move start/end with gap - thx matmaggi/Fhining/btsix
   * Add move shortcuts to waveform (arrow left/right) - thx Shaddy
   * Add shortcut for "add waveform" - thx Bill
   * Add shortcuts for "go to prev/next sub and play"
   * Add new subtitle format - thx Matmanamane
   * Add new subtitle format "Speechmatics" - thx Rene
   * Add new json sub formats - thx Steven
   * Add new sub format - thx Luke
   * Add new formats - thx Hai-Lag 
   * Add Bulgarian no-break-after-list - thx Eva