@@ -770,6 +770,7 @@
             public string FixSpaceBetweenNumbersExample { get; set; }
             public string FixDialogsOneLineExample { get; set; }
             public string SelectDefault { get; set; }
+            public string SetDefault { get; set; }
             public string FixContinuationStyleX { get; set; }
             public string XFixContinuationStyle { get; set; }
             public string FixUnnecessaryLeadingDots { get; set; }
